developen adaptive on page blog-list

--- a/blog-list.html
+++ b/blog-list.html
@@ -159,6 +159,9 @@
             <source srcset="/img/blog/blog-list-1m.png" media="(max-width: 550px)" width="387" height="334">
             <img class="blog-list-head__img" src="/img/blog/blog-list-1.png" alt="" width="645" height="555">
         </picture>
+        <div class="blog-list-head__circle">
+            <img src="/img/blog/circle-01.svg" alt="" width="269" height="714">
+        </div>
     </section>
 
     <section class="blog-list">
@@ -377,6 +380,12 @@
                     </div>
                 </li>
             </ul>
+            <div class="blog-list__controlls">
+                <button class="blog-list__more">Загрузить больше</button>
+            </div>
+        </div>
+        <div class="blog-list__circle">
+            <img src="/img/blog/circle-02.svg" alt="" width="348" height="759">
         </div>
     </section>
 
