add colors in project

--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
     </div>
 
     <!-- entry -->
-    <header class="header rek-1">
+    <header class="header turquoise--bg">
         <div class="header__wrap">          
             <div class="header__left">
                 <a class="header__logo" href="/bloggermall/">
@@ -147,7 +147,7 @@
         </div>
     </header>
 
-    <section class="blog-01">
+    <section class="blog-01 turquoise--bg">
         <div class="blog-01__wrap">
             <div class="blog-01__left">
                 <h1 class="blog-01__title">Здесь будет заголовок на пару строк</h1>
@@ -163,7 +163,6 @@
     </section>
 
     <section class="blog-02">
-        <div class="blog-02__costil"></div>
         <div class="blog-02__wrap">
             <div class="blog-02__text">
                 <p>Блогеры не только рассказывают о Вашем бренде, но и конвертируют своих подписчиков в Ваших реальных покупателей или клиентов. Окупаемость может составить 150-300% и больше! Но без плана и продуманной стратегии можно быстро разочароваться в influence-маркетинге – потратить весь рекламный бюджет и выйти в ноль без ожидаемого выхлопа.</p>
@@ -383,22 +382,107 @@
     </div> -->
 
 
-    <section class="blog-03">
+    <section class="blog-03 yellow--bg">
         <div class="blog-03__wrap">
             <div class="blog-03__row blog-03__row--first">
-                <div class="blog-03__image">
-                    <img class="blog-03__img" src="/img/blog/blog-02.png" alt="" width="418" height="418">
-                    <p class="blog-03__name">Селебрити</p>
+                <div class="blog-03__photo">
+                    <div class="blog-03__image pink--border-after">
+                        <img class="blog-03__img" src="/img/temp/blog-01.jpg" alt="" width="314" height="314">
+                    </div>
+                    <p class="blog-03__name pink--color">Селебрити</p>
                 </div>
-                <div class="blog-03__info">Например, реклама у <b>Селебрити</b> с многомиллионной армией фолловеров за баснословные деньги – не всегда гарантия моментальных продаж. Хотя, казалось бы, крупный блогер, авторитет, сотни тысяч показов, большой гонорар за один небольшой пост! Как же сотрудничать с инстаблогерами, чтобы не переплатить зря и не приесться целевой аудитории? Поделимся актуальными рекомендациями и кейсом.</div>
+                <div class="blog-03__info">
+                    <h3 class="blog-03__info-title pink--bg-after">Сравнение цен</h3>
+                    <p class="blog-03__info-text">Например, реклама у <b>Селебрити</b> с многомиллионной армией фолловеров за баснословные деньги – не всегда гарантия моментальных продаж. Хотя, казалось бы, крупный блогер, авторитет, сотни тысяч показов, большой гонорар за один небольшой пост! Как же сотрудничать с инстаблогерами, чтобы не переплатить зря и не приесться целевой аудитории? Поделимся актуальными рекомендациями и кейсом.</p>
+                </div>
             </div>
             <div class="blog-03__row blog-03__row--second">
-                <div class="blog-03__info">Блогеры не только рассказывают о Вашем бренде, но и конвертируют своих подписчиков в Ваших реальных покупателей или клиентов. Окупаемость может составить 150-300% и больше! Но без плана и продуманной стратегии можно быстро разочароваться в influence-маркетинге – потратить весь рекламный бюджет и выйти в ноль без ожидаемого выхлопа. Блогеры не только рассказывают о Вашем бренде.</div>
-                <div class="blog-03__image">
-                    <img class="blog-03__img" src="/img/blog/blog-03.png" alt="" width="418" height="418">
-                    <p class="blog-03__name blog-03__name--second">Блогер блогер</p>
+                <div class="blog-03__info">
+                    <h3 class="blog-03__info-title turquoise--bg-after">Сравнение цен</h3>
+                    <p class="blog-03__info-text">Блогеры не только рассказывают о Вашем бренде, но и конвертируют своих подписчиков в Ваших реальных покупателей или клиентов. Окупаемость может составить 150-300% и больше! Но без плана и продуманной стратегии можно быстро разочароваться в influence-маркетинге – потратить весь рекламный бюджет и выйти в ноль без ожидаемого выхлопа. Блогеры не только рассказывают о Вашем бренде.</p>
+                </div>
+                <div class="blog-03__photo">
+                    <div class="blog-03__image turquoise--border-after">
+                        <img class="blog-03__img" src="/img/temp/blog-02.jpg" alt="" width="314" height="314">
+                    </div>
+                    <p class="blog-03__name turquoise--color">Блогер блогер</p>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section class="blog-04">
+        <div class="blog-04__wrap">
+            <h2 class="blog-04__title">Tsukerka – раскрутка через блогеров на примере!</h2>
+                <table class="blog-04__table">
+                    <tr>
+                      <td>&nbsp;</td>
+                      <td>Knocky</td>
+                      <td>Flor</td>
+                      <td>Ella</td>
+                      <td>Juan</td>
+                    </tr>
+                    <tr>
+                      <td>Breed</td>
+                      <td>Jack Russell</td>
+                      <td>Poodle</td>
+                      <td>Streetdog</td>
+                      <td>Cocker Spaniel</td>
+                    </tr>
+                    <tr>
+                      <td>Age</td>
+                      <td>16</td>
+                      <td>9</td>
+                      <td>10</td>
+                      <td>5</td>
+                    </tr>
+                    <tr>
+                      <td>Owner</td>
+                      <td>Mother-in-law</td>
+                      <td>Me</td>
+                      <td>Me</td>
+                      <td>Sister-in-law</td>
+                    </tr>
+                    <tr>
+                      <td>Eating Habits</td>
+                      <td>Eats everyone's leftovers</td>
+                      <td>Nibbles at food</td>
+                      <td>Hearty eater</td>
+                      <td>Will eat till he explodes</td>
+                    </tr>
+                  </table>
+                <ul class="blog-04__list">
+                    <li class="blog-04__item">Характеристики</li>
+                    <li class="blog-04__item">Блогеры не только</li>
+                    <li class="blog-04__item">Конвертируют</li>
+                    <li class="blog-04__item">Характеристики</li>
+                    <li class="blog-04__item">Конвертируют</li>
+                    <li class="blog-04__item">Характеристики</li>
+                </ul>
+                <ul class="blog-04__list">
+                    <li class="blog-04__item">Характеристики</li>
+                    <li class="blog-04__item">не только рассказывают</li>
+                    <li class="blog-04__item">своих подписчиков</li>
+                    <li class="blog-04__item">характеристики</li>
+                    <li class="blog-04__item">своих подписчиков</li>
+                    <li class="blog-04__item">характеристики</li>
+                </ul>
+                <ul class="blog-04__list">
+                    <li class="blog-04__item">Характеристики</li>
+                    <li class="blog-04__item">о Вашем бренде</li>
+                    <li class="blog-04__item">в Ваших реальных</li>
+                    <li class="blog-04__item">характеристики</li>
+                    <li class="blog-04__item">в Ваших реальных</li>
+                    <li class="blog-04__item">характеристики</li>
+                </ul>
+                <ul class="blog-04__list">
+                    <li class="blog-04__item">Характеристики</li>
+                    <li class="blog-04__item">о Вашем брендео</li>
+                    <li class="blog-04__item">покупателей или клиентов.</li>
+                    <li class="blog-04__item">характеристики</li>
+                    <li class="blog-04__item">покупателей или клиентов.</li>
+                    <li class="blog-04__item">характеристики</li>
+                </ul>
         </div>
     </section>
 
