ready blog to laravel

--- a/blog.html
+++ b/blog.html
@@ -164,7 +164,7 @@
 
     <section class="blog-02">
         <div class="blog-02__wrap">
-            <div class="blog-02__text">
+            <div class="blog-02__content">
                 <p>Блогеры не только рассказывают о Вашем бренде, но и конвертируют своих подписчиков в Ваших реальных покупателей или клиентов. Окупаемость может составить 150-300% и больше! Но без плана и продуманной стратегии можно быстро разочароваться в influence-маркетинге – потратить весь рекламный бюджет и выйти в ноль без ожидаемого выхлопа.</p>
                 <p>Например, реклама у <b>Селебрити</b> с многомиллионной армией фолловеров за баснословные деньги – не всегда гарантия моментальных продаж. Хотя, казалось бы, крупный блогер, авторитет, сотни тысяч показов, большой гонорар за один небольшой пост! Как же сотрудничать с инстаблогерами, чтобы не переплатить зря и не приесться целевой аудитории? Поделимся актуальными рекомендациями и кейсом.</p>
                 <p>Количество подписчиков – далеко не главный аргумент в выборе блогеров. У звезд блогосферы, которые имеют от <b>200-300 тысяч подписчиков</b>, не всегда высокие показатели вовлеченности аудитории. Этот момент обязательно нужно учитывать еще до запуска кампании. Некоторые из Селебрити настолько часто публикуют рекламу, что ЦА «фильтрует» рекламные посты и привыкает к ним. То есть их посты не побуждают сразу же «переходить <a href="#" target="_blank">по ссылке</a> в описании».</p>
@@ -197,6 +197,7 @@
                 <div class="blog-03__info">
                     <h3 class="blog-03__info-title turquoise--bg-after">Сравнение цен</h3>
                     <p class="blog-03__info-text">Блогеры не только рассказывают о Вашем бренде, но и конвертируют своих подписчиков в Ваших реальных покупателей или клиентов. Окупаемость может составить 150-300% и больше! Но без плана и продуманной стратегии можно быстро разочароваться в influence-маркетинге – потратить весь рекламный бюджет и выйти в ноль без ожидаемого выхлопа. Блогеры не только рассказывают о Вашем бренде.</p>
+                    <a target="_blank" class="blog-03__info-link turquoise--bg" href="#">Подробнее</a>
                 </div>
             </div>
         </div>
@@ -252,7 +253,6 @@
         </div>
     </section>
 
-
     <div class="blog-05 turquoise--bg">
         <div class="blog-05__wrap">
             <div class="blog-05__info">
@@ -280,9 +280,9 @@
         </div>
     </div>
 
-    <section class="blog-06">
-        <div class="blog-06__wrap">
-            <div class="blog-06__text">
+    <section class="blog-02">
+        <div class="blog-02__wrap">
+            <div class="blog-02__content">
                 <p>Блогеры не только рассказывают о Вашем бренде, но и конвертируют своих подписчиков в Ваших реальных покупателей или клиентов. Окупаемость может составить 150-300% и больше! Но без плана и продуманной стратегии можно быстро разочароваться в influence-маркетинге – потратить весь рекламный бюджет и выйти в ноль без ожидаемого выхлопа.</p>
                 <p>Например, реклама у <b>Селебрити</b> с многомиллионной армией фолловеров за баснословные деньги – не всегда гарантия моментальных продаж. Хотя, казалось бы, крупный блогер, авторитет, сотни тысяч показов, большой гонорар за один небольшой пост! Как же сотрудничать с инстаблогерами, чтобы не переплатить зря и не приесться целевой аудитории? Поделимся актуальными рекомендациями и кейсом.</p>
                 <p>Количество подписчиков – далеко не главный аргумент в выборе блогеров. У звезд блогосферы, которые имеют от <b>200-300 тысяч подписчиков</b>, не всегда высокие показатели вовлеченности аудитории. Этот момент обязательно нужно учитывать еще до запуска кампании. Некоторые из Селебрити настолько часто публикуют рекламу, что ЦА «фильтрует» рекламные посты и привыкает к ним. То есть их посты не побуждают сразу же «переходить <a href="#" target="_blank">по ссылке</a> в описании».</p>
