--- a/blog-list.html
+++ b/blog-list.html
@@ -168,18 +168,20 @@
         <div class="blog-list__wrap">
             <ul class="blog-list__list blog-list__list--first">
                 <li class="blog-list__item grid-item">
-                    <img class="grid-item__img" src="/img/blog/img1.png" width="570" height="564" alt="">
-                    <div class="grid-item__shadow"></div>
-                    <div class="grid-item__info">
-                        <div class="grid-item__block">
-                            <div class="grid-item__tag">Мода</div>
-                            <p class="grid-item__title">Статья №1</p>
-                            <p class="grid-item__descr">Интересные новости о том о сём <br> Переходите и читайте</p>
+                    <a href="">
+                        <img class="grid-item__img" src="/img/blog/img1.png" width="570" height="564" alt="">
+                        <div class="grid-item__shadow"></div>
+                        <div class="grid-item__info">
+                            <div class="grid-item__block">
+                                <div class="grid-item__tag">Мода</div>
+                                <p class="grid-item__title">Статья №1</p>
+                                <p class="grid-item__descr">Интересные новости о том о сём <br> Переходите и читайте</p>
+                            </div>
+                            <button class="grid-item__button">
+                                <img class="grid-item__svg" src="/img/blog/arrow.svg" alt="" width="35" height="35">
+                            </button>
                         </div>
-                        <button class="grid-item__button">
-                            <img class="grid-item__svg" src="/img/blog/arrow.svg" alt="" width="35" height="35">
-                        </button>
-                    </div>
+                    </a>
                 </li>
                 <li class="blog-list__item grid-item">
                     <img class="grid-item__img" src="/img/blog/img2.png" width="570" height="267" alt="">
